// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-button Should render a button with an id 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--primary" id="identifier">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case full-width false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case full-width true 1`] = `
<mg-button aria-label="label" full-width="" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--full-width mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case full-width undefined 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case type button 1`] = `
<mg-button aria-label="label" role="button" tabindex="0" type="button">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case type reset 1`] = `
<mg-button aria-label="label" role="button" tabindex="0" type="reset">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case type submit 1`] = `
<mg-button aria-label="label" role="button" tabindex="0" type="submit">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an danger button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--danger">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an danger button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--danger mg-c-button--icon">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an danger-alt button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--danger-alt">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an danger-alt button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--danger-alt mg-c-button--icon">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an flat button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--flat">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an flat button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--flat mg-c-button--icon">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an info button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--info">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an info button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--icon mg-c-button--info">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an link button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--link">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an link button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--icon mg-c-button--link">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an primary button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an primary button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--icon mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an secondary button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--secondary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an secondary button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--icon mg-c-button--secondary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an success button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--success">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an success button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--icon mg-c-button--success">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should NOT disable button after click 1`] = `
<mg-button role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--primary" id="identifier">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should NOT disable button after click 2`] = `
<mg-button role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--primary" id="identifier">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should NOT disable button after click 3`] = `
<mg-button aria-disabled="true" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--disabled mg-c-button--primary" id="identifier">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should disable button after click 1`] = `
<mg-button role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should disable button after click 2`] = `
<mg-button aria-disabled="true" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--disabled mg-c-button--loading mg-c-button--primary">
      <mg-icon icon="loader" spin=""></mg-icon>
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should disable button after click 3`] = `
<mg-button aria-disabled="false" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should not have fn when disabled 1`] = `
<mg-button aria-disabled="true" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--disabled mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should not trigger disableOnClick when disabled 1`] = `
<mg-button aria-disabled="true" disableonclick="" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--disabled mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should not trigger disableOnClick when disabled 2`] = `
<mg-button aria-disabled="true" disableonclick="" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-c-button mg-c-button--disabled mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;
